# candle-mnist-tutorial

./: Cargo.toml
models/: mnist_cnn.safetensors  model.py
src/: main.rs
